--- a/Microsoft.Toolkit.Uwp.UI.Controls/InfiniteCanvas/InfiniteCanvas.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/InfiniteCanvas/InfiniteCanvas.xaml
@@ -98,32 +98,25 @@
 
 
                                     <ComboBox x:Name="CanvasComboBoxFontSizeTextBox"
+                                              IsEditable="True"
                                               Width="64"
                                               Height="32" SelectedIndex="9" Margin="0,0,12,0" VerticalAlignment="Center">
-                                        <ComboBoxItem Content="8" />
-                                        <ComboBoxItem Content="9" />
-                                        <ComboBoxItem Content="10" />
-                                        <ComboBoxItem Content="10.5" />
-                                        <ComboBoxItem Content="11" />
-                                        <ComboBoxItem Content="12" />
-                                        <ComboBoxItem Content="14" />
-                                        <ComboBoxItem Content="16" />
-                                        <ComboBoxItem Content="18" />
-                                        <ComboBoxItem Content="20" />
-                                        <ComboBoxItem Content="24" />
-                                        <ComboBoxItem Content="28" />
-                                        <ComboBoxItem Content="32" />
-                                        <ComboBoxItem Content="36" />
-                                        <ComboBoxItem Content="40" />
-                                        <ComboBoxItem Content="44" />
-                                        <ComboBoxItem Content="48" />
-                                        <ComboBoxItem Content="54" />
-                                        <ComboBoxItem Content="60" />
-                                        <ComboBoxItem Content="66" />
-                                        <ComboBoxItem Content="72" />
-                                        <ComboBoxItem Content="80" />
-                                        <ComboBoxItem Content="88" />
-                                        <ComboBoxItem Content="96" />
+                                        <x:String>8</x:String>
+                                        <x:String>9</x:String>
+                                        <x:String>10</x:String>
+                                        <x:String>11</x:String>
+                                        <x:String>12</x:String>
+                                        <x:String>14</x:String>
+                                        <x:String>16</x:String>
+                                        <x:String>18</x:String>
+                                        <x:String>20</x:String>
+                                        <x:String>22</x:String>
+                                        <x:String>24</x:String>
+                                        <x:String>26</x:String>
+                                        <x:String>28</x:String>
+                                        <x:String>36</x:String>
+                                        <x:String>48</x:String>
+                                        <x:String>72</x:String>
                                     </ComboBox>
 
                                 </StackPanel>
