Moved initialization of items collection to constructor to avoid static reference

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TabbedCommandBar/TabbedCommandBarPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TabbedCommandBar/TabbedCommandBarPage.xaml
@@ -10,8 +10,7 @@
 
     <!--  Shallow Copy  -->
     <Grid Visibility="Collapsed">
-        <controls:TabbedCommandBar>
-            <controls:TabbedCommandBarItem />
-        </controls:TabbedCommandBar>
+        <controls:TabbedCommandBar />
+        <controls:TabbedCommandBarItem Header="Dummy" />
     </Grid>
 </Page>
